# imapsize

./: AGENTS.md  CLAUDE.md  VERSIONING.md  imapsize.py  main.py  pyproject.toml
.github/workflows/: version-check.yml
templates/: base.html  index.html  listmail.html  login.html
