[project]
name = "imapsize"
version = "0.1.0"
description = "Flask web app for checking IMAP email mailbox sizes"
requires-python = ">=3.7"
dependencies = [
    "flask>=1.1.2",
    "flask-login>=0.5.0",
    "flask-caching>=1.10.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
